[package]
name = "app-benchmark"
authors = ["yarenty <yarenty@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yarenty/app_benchmark"
homepage = "https://github.com/yarenty/app_benchmark"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Benchmarking solution for separate end-to-end applications."
categories = ["command-line-utilities"]
keywords = [
    "benchmark",
    "cli",
    "trace",
    "tracing"
]

[dependencies]
tokio = { version = "1", features = ["full"] }
humantime = "2"
clap = { version = "3.2", features = ["derive", "color"]}
poloto = "15.2"
tagger ="4"
chrono ="0.4"
log = "0.4"
env_logger = "0.9"
thiserror = "1"
csv = "1"
serde = "1"
serde_derive = "1"
itertools = "0.10"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"


